# cortexAI-desktop

./: .gitignore  README.md  electron-builder.yml  package.json  tailwind.config.js
src/: AcademicPrompts.ts  App.tsx  Chat.tsx  ChatHistory.tsx  ChatSettings.tsx  ContextIndicator.tsx  CustomLink.tsx  FocusMode.tsx  FocusModeConfig.ts  FollowUpSuggestions.tsx  MessageContent.tsx  ModelList.tsx  ModelPuller.tsx  SearchModeSelector.tsx  SearchModes.ts  SearchResults.tsx  SystemPromptSelector.tsx  SystemPrompts.ts  TabManager.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  database.rs  lib.rs  main.rs  ollama.rs  search.rs
src/features/finance/: FinanceMode.tsx  alphaVantageApi.ts  financeService.ts  types.ts
src/services/: academicSearch.ts
