[package]
name = "cortexai-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cortexai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
roxmltree = "0.18.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
once_cell = "1.18.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
scraper = "0.17"
url = "2.4"
urlencoding = "2.1"
